--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,4 +1,5 @@
 name: eShopOnWeb Build and Test
+run-name: Run 1
 
 #Triggers (uncomment line below to use it)
 on: [push, workflow_dispatch]
@@ -9,7 +10,7 @@ env:
   LOCATION: eastus
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: da81289b-034a-43b9-b110-8d3647abcaf8
-  WEBAPP-NAME: eshoponweb-webapp-cam-12212024
+  WEBAPP-NAME: eshoponweb-webapp-12242024cam
 
 
 jobs:
